--- a/login_style.css
+++ b/login_style.css
@@ -3,14 +3,15 @@ body{
     
 }
 .login {
-    display: grid;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     background-color: black;
-    height: 100vh;
-    place-items: center;
   }
   
   .login > img {
     height: 200px;
+    padding: 100px;
   }
   
   .login > a {
